src/styles/layout/_header.scss
header {
    display: flex;
    flex-direction: row;
    width: 100%;
}

@media (max-width: 500px) {
    header {
        flex-direction: column;
    }
}

#left-header {
    display: flex;
    flex-direction: row;
}

#face-click-prompt {
    color: $primary-color;
    padding-bottom: 0;
}

#icon-container {
    position: relative;
    right: 10px;
    height: 140px;

    .doodle-icon {
        height: 140px;
    }

    .doodle-icon-overlay {
        position: absolute;
        height: 140px;
        z-index: 100;
        left: 0;
        bottom: 0;
        pointer-events: none;
    }

    #icon-change-hitbox {
        position: absolute;
        left: 15px;
        bottom: 13px;
        height: 65px;
        width: 65px;
        // icon change hitbox
        // background-color: rgba(255, 0, 0, 0.207);
    }
}

#overlay-phrase {
    font-size: $font-small;
    padding-top: 0;
}

nav {
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: flex-end;

    .nav-button {
        display: block;
        text-decoration: none;
        width: 100px;
        margin-right: $spacing-sm;
    }

    .asterisk {
        margin-right: $spacing-xs;
    }

    .nav-button .asterisk {
        visibility: hidden;
    }

    @media (hover: hover) {
        &:hover {
            .nav-button:hover .asterisk {
                visibility: visible;
            }
        }
    }

    .nav-button.active .asterisk {
        visibility: visible;
    }
}

@media (max-width: 500px) {
    nav {
        justify-content: space-evenly;
        flex-direction: row;

        .nav-button {
            width: auto;
        }
    }

    #left-header {
        width: 100%;

        #icon-container {
            margin-left: auto;
        }
    }
}

@media (max-width: 370px) {
    nav {
        flex-wrap: wrap;

        .nav-button {
            width: fit-content !important;
            margin-right: 0;
            text-decoration: underline;

            &:hover {
                text-decoration-color: $primary-color;
            }
        }

        .asterisk {
            display: none;
        }
    }
}

